<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kyoungcai.espressodemo.login.LoginFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/ed_uname"
            android:hint="用户名"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/ed_pwd"
            android:hint="密码"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn"
            android:text="登录"
            android:background="@drawable/bg_bt_selector"
            android:layout_width="wrap_content"
            android:clickable="false"
            android:layout_height="wrap_content" />

    </LinearLayout>
</FrameLayout>
